# omnia

./: AUTHORS  ChangeLog  Makefile.am  NEWS  cleanup  configure.ac  libomnia.pc.in  reconf
docs/: Makefile.am  libbrahe.doxygen  libbrahe_foot.html  libbrahe_head.html
src/: Makefile.am  gcdlcm.c  kiss.c  logtools.c  omnia.h  rounding.c  sinusoid.c  statistics.c  trig.c
src/.deps/: gcdlcm.Plo  kiss.Plo  logtools.Plo  rounding.Plo  sinusoid.Plo  statistics.Plo  trig.Plo
src/.libs/: libomnia-1.0.so.1  libomnia-1.0.so.1.0.0  libomnia.la  libomnia.lai
test/: Makefile.am  omnia_test_gcflcm.c  omnia_test_kiss.c  omnia_test_rounding.c  omnia_test_trig.c
test/.deps/: omnia_test_gcflcm.Po  omnia_test_kiss.Po  omnia_test_rounding.Po  omnia_test_trig.Po
test/.libs/: omnia_test_gcflcm  omnia_test_kiss  omnia_test_rounding  omnia_test_trig
